Fixed issue with images on home page going offscreen

--- a/Pokedex/Pokedex/wwwroot/css/main.css
+++ b/Pokedex/Pokedex/wwwroot/css/main.css
@@ -11,8 +11,9 @@
 }
 
 .siteFeatures img {
-  height: 10rem;
   width: auto;
+  max-width: 100%;
+  max-height: 10rem;
   object-fit: contain;
   border-radius: 3px;
   cursor: pointer;
